components/apiconnect/base/simple-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-deployment
  namespace: cp4i
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 'ghcr.io/ks-no/openshift-nginx/fiks-nginx-openshift:1.5'
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 8Gi
            requests:
              cpu: 100m
              memory: 256M
