components/apiconnect/base/netpol-apic-to-postgres.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-apic-operator-to-postgres-operator
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres-operator
  ingress:
    - ports:
        - protocol: TCP
          port: 8443
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ibm-apiconnect
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-operators
  policyTypes:
    - Ingress
